// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewSchoolCard should render properly with all props assigned 1`] = `
<article
  className="Card NewSchoolCard animatedCard"
>
  <img
    alt="Code Platoon Logo"
    className="logo"
    src="undefinedcodeSchoolLogos/code_platoon.jpg"
  />
  <div
    className="flexContainer"
  >
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <a
        className=""
        href="https://www.codeplatoon.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Go To Website
      </a>
    </button>
    <span
      className="singleLocationText"
    >
      Online Only
    </span>
  </div>
  <hr
    className="divider"
  />
  <section
    className="flexContainer detailIcons"
  >
    <div />
  </section>
</article>
`;

exports[`NewSchoolCard should render properly with all required assigned 1`] = `
<article
  className="Card NewSchoolCard animatedCard"
>
  <img
    alt="Code Platoon Fake Logo"
    className="logo"
    src="undefinedcodeSchoolLogos/code_platoon.jpg"
  />
  <div
    className="flexContainer"
  >
    <button
      className="Button primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      <a
        className=""
        href="https://www.codeplatoon.org/not-real"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screenReaderOnly"
        >
          Opens in new window
        </span>
        Go To Website
      </a>
    </button>
    <span
      className="singleLocationText"
    >
      Online Only
    </span>
  </div>
  <hr
    className="divider"
  />
  <section
    className="flexContainer detailIcons"
  >
    <div />
  </section>
</article>
`;
